# house-of-stake-demo

./: .cursorrules  .gitignore  LICENSE  package.json  plan.md  project-structure.txt
contract/: .gitignore  Cargo.toml  build.sh  deploy.sh
contract/venear-contract/: Cargo.toml
contract/venear-contract/src/: lib.rs
contract/voting-contract/: Cargo.toml
contract/voting-contract/src/: lib.rs
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
