[package]
name = "venear-contract"
version = "0.1.0"
edition = "2021"
authors = ["Lane Rettig"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
uint = { version = "0.9.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
